<resources>
    <string name="app_name">Strays</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="btn_denuncie">Denuncie</string>
    <string name="txt_denuncia">Denuncie aqui!</string>
    <string name="edt_tipo">Tipo...</string>
    <string name="edt_endereco">Endereço...</string>
    <string name="edt_descricao">Descrição...</string>
    <string name="edt_data">Data...</string>
    <string name="txt_home">Home</string>
    <string name="txt_boas_vindas">Seja bem vindo!!!</string>
    <string name="evento_adocao">Imagem que informa sobre evento próximo</string>
    <string name="denuncias">Denuncias: </string>
    <string name="ref_tipo">Tipo:</string>
    <string name="ref_descricao">Descrição:</string>
    <string name="ref_endereco">Endereço:</string>
    <string name="btn_ir_perfil">Ver perfil</string>
    <string name="btn_criar_denuncia">Criação de denuncias</string>
    <string name="btn_ver_denuncia">Ver denuncias</string>
</resources>