<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaCriarDenuncias"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_denuncia"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <View
            android:id="@+id/view_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/view_logo"
            app:layout_constraintEnd_toEndOf="@id/view_logo"
            app:layout_constraintBottom_toBottomOf="@id/view_logo"
            android:src="@drawable/logo"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <View
            android:id="@+id/view_edits_text"
            android:layout_width="400dp"
            android:layout_height="400dp"
            style="@style/edit_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/edt_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edt_tipo"
            app:layout_constraintTop_toTopOf="@id/view_edits_text"
            app:layout_constraintStart_toStartOf="@id/view_edits_text"
            app:layout_constraintEnd_toEndOf="@id/view_edits_text"
            />
        <EditText
            android:id="@+id/edt_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edt_descricao"
            app:layout_constraintTop_toBottomOf="@id/edt_tipo"
            app:layout_constraintStart_toStartOf="@id/view_edits_text"
            app:layout_constraintEnd_toEndOf="@id/view_edits_text"
            />
        <EditText
            android:id="@+id/edt_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edt_endereco"
            app:layout_constraintTop_toBottomOf="@id/edt_descricao"
            app:layout_constraintStart_toStartOf="@id/view_edits_text"
            app:layout_constraintEnd_toEndOf="@id/view_edits_text"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/view_edits_text"
            app:layout_constraintStart_toStartOf="@id/view_edits_text"
            app:layout_constraintTop_toBottomOf="@id/edt_endereco"
            android:layout_marginTop="20dp"
            android:text="@string/btn_denuncie"
            android:textColor="@color/black"
            style="@style/Button"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>