<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".VerDenuncias">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        >

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_home"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_boas_vindas"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <View
            android:id="@+id/view_img"
            android:layout_width="355dp"
            android:layout_height="175dp"
            android:background="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:src="@drawable/evento_adocao"
            app:layout_constraintTop_toTopOf="@id/view_img"
            app:layout_constraintStart_toStartOf="@id/view_img"
            app:layout_constraintEnd_toEndOf="@id/view_img"
            app:layout_constraintBottom_toBottomOf="@id/view_img"
            android:layout_margin="20dp"
            android:contentDescription="@string/evento_adocao"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/denuncias"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDenuncias"
        android:scrollbars="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>