<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".TelaAdocao">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adote aqui"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <View
            android:id="@+id/view_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/view_logo"
            app:layout_constraintEnd_toEndOf="@id/view_logo"
            app:layout_constraintBottom_toBottomOf="@id/view_logo"
            android:src="@drawable/logo"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/topo">

        <View
            android:id="@+id/view_edits_text"
            style="@style/view"
            android:layout_width="400dp"
            android:layout_height="275dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_adocao_tipo"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edt_tipo"
            app:layout_constraintStart_toStartOf="@id/view_edits_text"
            app:layout_constraintEnd_toEndOf="@id/view_edits_text"
            app:layout_constraintTop_toTopOf="@+id/view_edits_text"
            android:layout_marginTop="80dp"

            />
        <EditText
            android:id="@+id/edt_adocao_descricao"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edt_descricao"
            app:layout_constraintTop_toBottomOf="@id/edt_adocao_tipo"
            app:layout_constraintStart_toStartOf="@id/view_edits_text"
            app:layout_constraintEnd_toEndOf="@id/view_edits_text"
            />
        <EditText
            android:id="@+id/edt_adocao_endereco"
            android:layout_width="match_parent"
            style="@style/edit_text"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edt_endereco"
            app:layout_constraintTop_toBottomOf="@id/edt_adocao_descricao"
            app:layout_constraintStart_toStartOf="@id/view_edits_text"
            app:layout_constraintEnd_toEndOf="@id/view_edits_text"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_adotar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="Adotar"
            style="@style/Button_dois"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:onClick="denunciar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_adocao_endereco"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>

